--- a/XamarinIntermediario003/XamarinIntermediario003/App.xaml
+++ b/XamarinIntermediario003/XamarinIntermediario003/App.xaml
@@ -4,7 +4,12 @@
              x:Class="XamarinIntermediario003.App">
 	<Application.Resources>
 
-		<!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <Color x:Key="danger">Red</Color>
+            <Color x:Key="warning">Yellow</Color>
+            <Color x:Key="info">Blue</Color>
+            <Color x:Key="success">Green</Color>
+        </ResourceDictionary>
 
-	</Application.Resources>
+    </Application.Resources>
 </Application>
