--- a/XamarinIntermediario003/XamarinIntermediario003/MainPage.xaml
+++ b/XamarinIntermediario003/XamarinIntermediario003/MainPage.xaml
@@ -4,10 +4,19 @@
              xmlns:local="clr-namespace:XamarinIntermediario003"
              x:Class="XamarinIntermediario003.MainPage">
 
-    <Label Text="Welcome to Xamarin Forms!"
-           VerticalOptions="Center"
-           HorizontalOptions="Center"
-           TextColor="{StaticResource danger}"
-           />
+    <StackLayout>
+        <Label Text="Welcome to Xamarin Forms!"
+               VerticalOptions="Center"
+               HorizontalOptions="Center"
+               TextColor="{StaticResource danger}"
+               />
+        <Label Text="Podemos colocar no BackgroundColor"
+               VerticalOptions="Center"
+               HorizontalOptions="Center"
+               BackgroundColor="{StaticResource warning}"
+               TextColor="{StaticResource info}"
+               />
+        <Button TextColor="{StaticResource success}" Text="Sucesso!" />
+    </StackLayout>
 
 </ContentPage>
